syntax = "proto3";

package users;
message CreateUserDto {
  string email = 1;
  string first_name = 2;
  string last_name = 3;
  string profileImageUrl = 4;
}

message UserCreatedResponse {
   string email = 1;
  string first_name = 2;
  string last_name = 3;
  string profileImageUrl = 4;
  string _id = 5;
  optional string message = 6;
  optional uint32 statusCode = 7;

} 

message UserResponse {
  string _id = 1;
}


service UserService {
  rpc create (CreateUserDto) returns (UserCreatedResponse) {}
  rpc getUserByEmail (CreateUserDto) returns (UserResponse) {}
  rpc getUserById (UserResponse) returns (UserCreatedResponse){}

}